samples/_failures_safe/1761362462_baf2e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a76e606.c:129: error: expected ‘;’, ‘,’ or ‘)’ at end of input
